# hippy

./: README.txt
.github/workflows/: build.yaml
samples/snake/: snake.asm  snake.hex
src/: CMakeLists.txt  addrmng.cpp  addrmng.h  alu.cpp  alu.h  asmeditor.cpp  asmeditor.h  baseWnd.cpp  baseWnd.h  dasmwnd.cpp  dasmwnd.h  debugwnd.cpp  debugwnd.h  device.cpp  device.h  dialogs.cpp  dialogs.h  disassembler.cpp  disassembler.h  environment.h  hippy.h  m6800.cpp  m6800.h  main.cpp  memdump.cpp  memdump.h  registerwnd.cpp  registerwnd.h  stackwnd.cpp  stackwnd.h  utils.cpp  utils.h  vcpkg.json  xmlparser.cpp  xmlparser.h
src/8279_dll/: 8279_dll.cpp  8279_dll.h  CMakeLists.txt  ReadMe.txt  StdAfx.cpp  StdAfx.h  keypad.cpp  keypad.h  resource.h
src/Hippy/: Hippy.aps  Hippy.dsp  Hippy.dsw  Hippy.opt  Hippy.plg  Hippy.rc  Thumbs.db  addrmng.cpp  asm.rar  asmeditor.cpp  asmeditor.h  baseWnd.cpp  baseWnd.h  dasmwnd.cpp  dasmwnd.h  debugwnd.cpp  debugwnd.h  device.h  device.hdf  device.hdf.bak  device.xml.bak  dialogs.h  disassembler.h  environment.h  hippy.clw  m6800.cpp  m6800.h  main.cpp  memdump.cpp  memdump.h  registerwnd.cpp  registerwnd.h  resource.h  stackwnd.cpp  stackwnd.h  xmlparser.cpp  xmlparser.h
src/Hippy/8279_dll/: 8279_dll.aps  8279_dll.clw  8279_dll.cpp  8279_dll.def  8279_dll.dsp  8279_dll.h  8279_dll.plg  8279_dll.rc  CMakeLists.txt  Thumbs.db  keypad.h
src/Hippy/Debug/: Hippy.pch  hippy.res  vc60.idb
src/Hippy/asm/: asm.dsp  asm.plg  asm.yacc.cpp  codes.h  flex.bat  phase2.h  sym_table.cpp  sym_table.h  tables.cpp  y.tab.h  y.tab.hpp
src/Hippy/asm/Debug/: y.tab.cpp
src/Hippy/devices/: device.xml
src/Hippy/eprom/: Resource.h  StdAfx.h  eprom.aps  eprom.clw  eprom.def  eprom.dsp  eprom.h  eprom.plg
src/Hippy/res/: Thumbs.db  keypad.psd
src/asm/: CMakeLists.txt  actions.cpp  actions.h  asm.l  asm.lex.c  asm.lex.cpp  asm.rar  asm.y  codes.cpp  codes.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  phase2.h  stack.h  sym_table.cpp  sym_table.h  tables.cpp  tables.h  y.tab.hpp
src/asm/Debug/: asm.ilk  y.tab.hpp
src/asm/tests/: CMakeLists.txt  test-codes.cpp  test-parser.cpp
src/cmake/: FindWXRC.cmake
src/devices/: device.xml  monitor.rom
src/eprom/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  eprom.cpp  eprom.def  eprom.h  eprom.rc
src/eprom/res/: eprom.rc2
src/keypad/: 8279.cpp  8279.def  8279.h  8279.rc  CMakeLists.txt  StdAfx.cpp  StdAfx.h  keypad.cpp  keypad.h  keypad.rc  keypad.xrc  resource.h
src/tests/: CMakeLists.txt  basic.cpp  test-disassembler.cpp  test-utils.cpp
